# paddleocr4android

./: .gitignore  README.md  settings.gradle
.github/workflows/: Keystore.yml  main.yml
app/src/main/: AndroidManifest.xml
app/src/main/java/com/equationl/paddleocr4android/app/: MainActivity.kt
doc/: fastDeploy.md  ncnn.md
ncnnAndroidPPOCR/: build.gradle
ncnnAndroidPPOCR/src/androidTest/java/com/equationl/ncnnandroidppocr/: ExampleInstrumentedTest.kt
ncnnAndroidPPOCR/src/main/java/com/equationl/ncnnandroidppocr/: OCR.kt
ncnnAndroidPPOCR/src/main/java/com/equationl/ncnnandroidppocr/bean/: Device.kt  DrawModel.kt  ImageSize.kt  ModelType.kt  OcrResult.kt
ncnnAndroidPPOCR/src/main/java/com/equationl/ncnnandroidppocr/cpp/: OCRNative.kt
ncnnAndroidPPOCR/src/main/jni/: CMakeLists.txt  ppocrv5.cpp  ppocrv5.h  ppocrv5ncnn.cpp
ncnnAndroidPPOCR/src/test/java/com/equationl/ncnnandroidppocr/: ExampleUnitTest.kt
ncnndemo/: .gitignore  build.gradle
ncnndemo/src/androidTest/java/com/equationl/ncnndemo2/: ExampleInstrumentedTest.kt
ncnndemo/src/main/: AndroidManifest.xml
ncnndemo/src/main/java/com/equationl/ncnndemo2/: MainActivity.kt
ncnndemo/src/main/res/layout/: activity_main.xml
ncnndemo/src/main/res/values/: strings.xml
ncnndemo/src/test/java/com/equationl/ncnndemo2/: ExampleUnitTest.kt
